2007-07-11  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issue 22: Check for signals and slots
	* src/lib/MarbleControlBox.h (MarbleControlBox): Use Q_SLOTS and
	Q_SIGNALS instead slots and signals

2007-07-11  Murad Tagirov  <tmurad@gmail.com>

    Use QCoreApplication instead of QApplication
    Use "Schema" tag to compliant to kml reference
    * tools/asc2kml/asc2kml.cpp

    Updated kml diagram after talk with Inge Wallin
    * projects/kml/KMLClasses.xmi

2007-07-11  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issues 4 and 15: copyright and license
	* src/lib/AbstractScanlineTextureMapper.h
	* src/lib/AbstractScanlineTextureMapper.cpp
	* src/lib/FlatScanlineTextureMapper.h
	* src/lib/FlatScanlineTextureMapper.cpp
	* src/lib/GlobeScanlineTextureMapper.h
	* src/lib/GlobeScanlineTextureMapper.cpp
	* src/lib/gps/GpsLayer.h: Fix license and copyright 
	
	Fix Krazy issue 4: Acceptable copyright.
	* src/lib/gps/Track.cpp (addTrackSeg): Fix Krazy issue and cleaning

2007-07-10  Inge Wallin  <inge@lysator.liu.se>

	Break out drawing of the atmosphere effect into its own function
	* src/lib/MarbleWidget.{h,cpp} (drawAtmosphere): New function
	(zoomView): Call drawAtmosphere()
	(resizeEvent): Call drawAtmosphere()
	* src/lib/MarbleModel.cpp (resize): Remove draw atmosphere

	Introduce the ViewParams class and move one item into it.
	* src/lib/ViewParams.{h,cpp}: new files.
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Add
	m_viewParams and delete m_canvasImage
	* src/lib/MarbleModel.{h,cpp}: Use ViewParams where applicable.

	Move initialization of the basic image from MarbleModel to
	MarbleWidget
	* src/lib/MarbleModel.cpp (setRadius): Remove most contents
	* src/lib/MarbleWidget.cpp (zoomView): Add the contents from above

	Krazy fix: Use proper include directives
	* src/lib/httpfetchfile.h: Fix include

	Krazy fixes: Add 'explicit' to constructors:
	* src/lib/AbstractScanlineTextureMapper.h,
	src/lib/FlatScanlineTextureMapper.h,