@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<XMI xmlns:UML="http://schema.omg.org/spec/UML/1.3" verified="false" timestamp="2007-07-12T00:41:10" xmi.version="1.2" >
+<XMI xmlns:UML="http://schema.omg.org/spec/UML/1.3" verified="false" timestamp="2007-07-12T01:16:10" xmi.version="1.2" >
  <XMI.header>
   <XMI.documentation>
    <XMI.exporter>umbrello uml modeller http://uml.sf.net</XMI.exporter>
@@ -78,7 +78,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="21" isRoot="false" isAbstract="false" isQuery="false" name="getPlaceContainer" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6923" type="22" />
+        <UML:Parameter kind="return" xmi.id="6939" type="22" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="27" isRoot="false" isAbstract="false" isQuery="false" name="loadKml" >
@@ -107,7 +107,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="73" isRoot="false" isAbstract="false" isQuery="false" name="whichPlaceMarkAt" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6924" type="44" />
+        <UML:Parameter kind="return" xmi.id="6940" type="44" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="76" value="" type="74" name="point" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -129,7 +129,7 @@
       <UML:Attribute isSpecification="false" visibility="private" xmi.id="5006" type="5007" name="m_coordinate" />
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6039" isRoot="false" isAbstract="false" isQuery="false" name="attribute" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6925" type="6810" />
+        <UML:Parameter kind="return" xmi.id="6941" type="6810" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6040" value="" type="19" name="key" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -141,7 +141,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6457" isRoot="false" isAbstract="false" isQuery="false" name="metaFields" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6926" type="6486" />
+        <UML:Parameter kind="return" xmi.id="6942" type="6486" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
      </UML:Classifier.feature>
@@ -192,13 +192,13 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="1111" isRoot="false" isAbstract="false" isQuery="false" name="getStyleById" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6927" type="426" />
+        <UML:Parameter kind="return" xmi.id="6943" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="1112" value="" type="2" name="styleId" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="1170" isRoot="false" isAbstract="false" isQuery="false" name="getStyleByRole" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6928" type="426" />
+        <UML:Parameter kind="return" xmi.id="6944" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="1171" value="" type="161" name="role" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -357,7 +357,7 @@
      <UML:Classifier.feature>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6167" isRoot="false" isAbstract="false" isQuery="false" name="getPlaceContainer" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6929" type="44" />
+        <UML:Parameter kind="return" xmi.id="6945" type="44" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6168" value="" type="2" name="imgwidth" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6174" value="" type="2" name="imgheight" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6180" value="" type="2" name="radius" />
@@ -365,7 +365,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6297" isRoot="false" isAbstract="false" isQuery="false" name="getStyle" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="6930" type="426" />
+        <UML:Parameter kind="return" xmi.id="6946" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6304" value="" type="333" name="placemark" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -395,7 +395,7 @@
   </UML:Model>
  </XMI.content>
  <XMI.extensions xmi.extender="umbrello" >
-  <docsettings viewid="5571" documentation="" uniqueid="6930" />
+  <docsettings viewid="5571" documentation="" uniqueid="6946" />
   <diagrams>
    <diagram snapgrid="0" showattsig="1" fillcolor="#ffffc0" linewidth="0" zoom="100" showgrid="0" showopsig="1" usefillcolor="1" snapx="10" canvaswidth="959" snapy="10" showatts="1" xmi.id="520" documentation="" type="402" showops="1" showpackage="0" name="KMLClasses" localid="900000" showstereotype="0" showscope="1" snapcsgrid="0" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="#ff0000" canvasheight="834" >
     <widgets>
@@ -574,7 +574,7 @@
      <classwidget usesdiagramfillcolour="0" width="236" showattsigs="601" usesdiagramusefillcolour="0" x="55" y="85" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="75" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="333" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="1" width="149" showattsigs="601" usesdiagramusefillcolour="1" x="99" y="272" drawascircle="0" showopsigs="601" linewidth="none" fillcolour="none" height="82" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="2177" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,1,0,0,0,0" linecolor="none" />
      <classwidget usesdiagramfillcolour="1" width="195" showattsigs="601" usesdiagramusefillcolour="1" x="360" y="54" showopsigs="601" linewidth="none" fillcolour="none" height="270" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="15" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="none" />
-     <classwidget usesdiagramfillcolour="0" width="420" showattsigs="601" usesdiagramusefillcolour="0" x="39" y="485" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="77" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="6145" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
+     <classwidget usesdiagramfillcolour="0" width="420" showattsigs="601" usesdiagramusefillcolour="0" x="31" y="499" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="77" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="6145" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="1" width="155" showattsigs="601" usesdiagramusefillcolour="1" x="644" y="425" showopsigs="601" linewidth="none" fillcolour="none" height="82" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="426" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="none" />
     </widgets>
     <messages/>
